@@ -1,3 +1,8 @@
+1999-05-11  William A. Perkins  <wa_perkins@pnl.gov>
+
+	* mass2_main_025.f90: The output to mass_source_iounit had lines
+	  too long, the output was spread over multiple lines
+
 1999-04-08  William A. Perkins  <wa_perkins@pnl.gov>
 
 	* makefile (DEBUG): removed -g3 and added -Ofast, as per
